# rivn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  nob.cpp  nob.h  nob.hpp
cmake/: AddSources.cmake
include/: conup.hpp
nob/: build-lua-files-copy.c  build-lua.c  build-rivn.c
src/: CMakeLists.txt  Instance.cpp  Instance.h  lua_helper.hpp  main.cpp
src/generator/: Generator.h
src/include/: cini.h
src/libs/: CMakeLists.txt
src/libs/setup-lib/: CMakeLists.txt
src/libs/setup-lib/src/: main.cpp  setup.h
src/lua/: CMakeLists.txt  safty.lua
src/module/: Module.h
src/src/: .main.cpp.swp  lib.hpp  main.cpp
test/: .config.ac.swp  config.ac
